--- a/styles/style.css
+++ b/styles/style.css
@@ -1,3 +1,109 @@
+* {
+  margin: 0px 0px;
+  padding: 0px 0px;
+  box-sizing: border-box;
+}
+html {
+  font-size: 16px;
+  background-color: grey;
+  --main-padding: 0px 30px;
+}
+body {
+  width: 320px;
+  background-color: white;
+  margin: 10px auto;
+  border-radius: 10px;
+}
+.banner {
+  overflow: hidden;
+  height: 220px;
+  background-image: url('../images/drawers.jpg');
+  background-position: center top;
+  background-size: 100% 120%;
+  border-radius: 10px 10px 0px 0px;
+}
+main {
+  margin-top: 40px; 
+}
+.text {
+  margin-bottom: 30px;
+  padding: var(--main-padding);
+}
+.text-title {
+  font-size: 16px;
+  margin-bottom: 15px;
+  color: hsl(217, 19%, 35%);
+}
+.text-body {
+  font-size: 13px;
+  line-height: 1.4;
+  color: hsl(214, 17%, 51%);
+}
+.bar {
+  height: 65px;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  padding: var(--main-padding);
+  border-radius: 0px 0px 10px 10px;
+}
+.author-img {
+  width: 15%;
+  border-radius: 100%;
+}
+.name-date {
+  align-self: stretch;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  width: 75%;
+  padding: 2px 15px;
+  
+}
+.author-name {
+  font-size: 13px;
+  margin-bottom: 5px;
+  color: hsl(217, 19%, 35%);
+}
+.date {
+  font-size: 13px;
+  color: hsl(212, 23%, 69%);
+}
+.arrow-img-container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 30px;
+  height: 30px;
+  background-color: hsl(0 0% 90%);
+  border-radius: 100%;
+}
+.bar-2 {
+  display: flex;
+  background-color: hsl(217, 19%, 35%);
+  justify-content: space-between;
+}
+.share {
+  color: white;
+  letter-spacing: 4px;
+  margin-right: 10px;
+  color: hsl(212, 23%, 69%);
+  font-size: 13px;
+}
+.social {
+  width: 55%;
+  display: flex;
+}
+.social-icon-img {
+  margin-right: 20px;
+}
+.arrow-img-container.dark {
+  background-color: hsl(214, 17%, 51%);
+}
+
+
+
+
 .attribution { 
   font-size: 11px; text-align: center; 
 }
