--- a/styles/style.css
+++ b/styles/style.css
@@ -8,9 +8,12 @@ html {
   background-color: grey;
   font-family: 'Manrope', sans-serif;
   --main-padding: 0px 33px;
+  --main-width: 320px;
 }
 body {
-  width: 320px;
+  display: flex;
+  flex-direction: column;
+  width: var(--main-width);
   background-color: white;
   margin: 10px auto;
   border-radius: 10px;
@@ -80,7 +83,7 @@ main {
   border-radius: 100%;
 }
 .bar-2 {
-  display: flex;
+  display: none;
   background-color: hsl(217, 19%, 35%);
   justify-content: space-between;
 }
@@ -101,13 +104,40 @@ main {
 .arrow-img-container.dark {
   background-color: hsl(214, 17%, 51%);
 }
-
-
-
-
 .attribution { 
   font-size: 11px; text-align: center; 
 }
 .attribution a { 
   color: hsl(228, 45%, 44%); 
 }
+
+@media only screen and (min-width: 720px) {
+  body {
+    flex-direction: row;
+    width: 720px;
+    height: 270px;
+  }
+  .banner {
+    width: 40%;
+    height: unset;
+    flex-shrink: 0;
+    border-radius: 10px 0px 0px 10px;
+  }
+  main {
+    margin-top: 30px;
+  }
+  .text {
+    margin-bottom: 10px;
+  }
+  .text-title {
+    font-size: 20px;
+    margin-bottom: 10px;
+  }
+  .author-img {
+    width: 10%;
+  }
+  .author-name {
+    margin-bottom: 0px;
+  }
+}
+
