--- a/styles/style.css
+++ b/styles/style.css
@@ -9,6 +9,7 @@ html {
   font-family: 'Manrope', sans-serif;
   --main-padding: 0px 33px;
   --main-width: 320px;
+  --v-dark-grey-blue: hsl(217, 19%, 35%);
 }
 body {
   display: flex;
@@ -36,7 +37,7 @@ main {
 .text-title {
   font-size: 16px;
   margin-bottom: 15px;
-  color: hsl(217, 19%, 35%);
+  color: var(--v-dark-grey-blue);
 }
 .text-body {
   font-size: 13px;
@@ -47,6 +48,7 @@ main {
   height: 65px;
   display: flex;
   flex-direction: row;
+  justify-content: space-between;
   align-items: center;
   padding: var(--main-padding);
   border-radius: 0px 0px 10px 10px;
@@ -61,13 +63,12 @@ main {
   flex-direction: column;
   justify-content: center;
   width: 75%;
-  padding: 2px 15px;
-  
+  padding: 2px 15px; 
 }
 .author-name {
   font-size: 13px;
   margin-bottom: 5px;
-  color: hsl(217, 19%, 35%);
+  color: var(--v-dark-grey-blue);
 }
 .date {
   font-size: 13px;
@@ -84,8 +85,11 @@ main {
 }
 .bar-2 {
   display: none;
-  background-color: hsl(217, 19%, 35%);
+  background-color: var(--v-dark-grey-blue);
   justify-content: space-between;
+}
+.triangle {
+  display: none;
 }
 .share {
   color: white;
@@ -95,11 +99,14 @@ main {
   font-size: 13px;
 }
 .social {
-  width: 55%;
+  width: 100px;
   display: flex;
+  justify-content: space-between;
+  align-items: center;
+  margin-right: 50px;
 }
 .social-icon-img {
-  margin-right: 20px;
+  margin-right: 0px;
 }
 .arrow-img-container.dark {
   background-color: hsl(214, 17%, 51%);
@@ -138,6 +145,30 @@ main {
   }
   .author-name {
     margin-bottom: 0px;
+  }
+  .bar-2 {
+    display: none;
+    position: absolute;
+    border-radius: 10px 10px 10px 10px;
+    padding: 20px 30px;
+    height: 40px;
+    top: 150px;
+    right: 26px;
+    align-items: center;
+  }
+  .social {
+    width: 108px;
+    margin-right: 0px;
+  }
+  .triangle {
+    width: 20px;
+    height: 20px;
+    display: block;
+    position: absolute;
+    background-color: var(--v-dark-grey-blue);
+    left: 105px;
+    bottom: -10px;
+    transform: rotate(45deg);
   }
 }
 
